tests/NormalTests/paczka1/fuzzy1/32060261.err
Error in line 1: yoi3Tkdi A467 39,4
Error in line 4: n2tBIU A467 12,8
Error in line 7: n2tBIU A725 22,7
Error in line 8: n2tBIU A142 86,2
Error in line 26: A142 A142 56,9
Error in line 28: A142 A467 36,5
Error in line 36: yoi3Tkdi A467 -2,5
